* Fixed issue #46 https://github.com/jo-source/jo-client-platform/issues/46 Class cast Exception when creating linked bean with IBeanValidator
* Fixed issue #41 https://github.com/jo-source/jo-client-platform/issues/41 Selection lost in BeanTable when sorting twice in quick succession
* Fixed issue #43 https://github.com/jo-source/jo-client-platform/issues/43 JpaServiceDecorator PersistenceUnitName 

----------------------------------------------------------------------------------------------------------------------------

0.57.0 


New jowidgets version 0.63.0 will be used

----------------------------------------------------------------------------------------------------------------------------

0.58.0 


Features:


Bugfixes:

* Fixed issue #50 https://github.com/jo-source/jo-client-platform/issues/50 Validation Warning persists after undo in BeanTable
* Fixed issue #32 https://github.com/jo-source/jo-client-platform/issues/32 CachedEntityService returns EntityInfo for unknown entities
* Fixed issue #52 https://github.com/jo-source/jo-client-platform/issues/52 Save and Undo shortcuts of default actions will not work with swing implementation


----------------------------------------------------------------------------------------------------------------------------

0.59.0 


Features:


Bugfixes:

* Fixed issue #53 https://github.com/jo-source/jo-client-platform/issues/53 Shortcut(CTRL+E) not working for edit in Beantable when popup was not visible before
* Fixed issue #54 https://github.com/jo-source/jo-client-platform/issues/54 User Question Dialog has no title
* Fixes issue #55 https://github.com/jo-source/jo-client-platform/issues/55 BeanMessage in table should be rendered the same way than in detail 
* Fixes issue #56 https://github.com/jo-source/jo-client-platform/issues/56 BeanMessages should be cleared, when undo will be done

